style-project.css
body {
  overflow-x: hidden;
  font-family: 'Playfair Display', serif;
  font-size: 1.5rem;
}

#page {
  overflow: hidden;
  white-space: nowrap;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: beige;
  display: flex;
  flex-wrap: no-wrap;
  /*border: blue 1px solid;*/
}

.pane {
  flex: 0 0 100vw;
  height: 90vh;
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  background-color: beige;
  margin-top: 5vh;
  /*border: red 1px solid;*/
}

.aside {
  position: absolute;
  top: 0;
  margin-left: 70px;
  background: none;
  transform-origin: 0 0;
  transform: rotate(90deg);
  font-family: 'Lora', serif;
  font-size: 0.7rem;
  width: 90vh;
  padding-bottom: 15px;
  border-bottom: 1px solid grey;
}

.home {
  position: relative;
  left: 0;
  top: 0;
  height: inherit;
  width: 1430px;
  /*border: green 1px solid;*/
}

.long {
  flex: 0 0 710px;
}

#works {
  position: absolute;
  left: 20px;
  top: 50%;
  transform: translateY(-50%);
  margin: 0;
  padding: 0;
  z-index: 50;
  list-style: none;
}

#about {
  position: absolute;
  left: 366px;
  top: 50%;
  transform: translateY(-50%);
  z-index: 50;
  height: inherit;
  width: 100%;
}

.project {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  display: inline-block;
  /*border: 1px solid red;*/
  margin: 0 50px 0 0;
  width: 1050px;
  height: 90vh;
}

#chatbox {
  width: 400px;
  height: 100%;
  border: 1px black solid;
  overflow: auto;
  /*padding: 20px;*/
  padding-bottom: 65px;
  padding-top: 0;
  box-sizing: border-box;
  background: white;
}

.messageBorder {
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 20px;
  padding-top: 20px;
  width: inherit;
  font-family: 'Lora', serif;
  font-size: 1rem;
  margin: 0;
}

.chatboxContainer {
  position: relative;
  width: 400px;
  height: 100%;
  padding: 0;
  /*border: 1px solid blue;*/
}

.smol {
  font-family: 'Lora', serif;
  font-size: 0.7rem;
  margin: 15px 5px 15px 0;
}

form {
  position: absolute;
  bottom: 0;
  left: 1px;
  width: 100%;
}

button {
  position: absolute;
  right: 1px;
  bottom: -1px;
  height: 44px;
  width: 60px;
  border: 1px solid grey;
  background: lightgrey;
}

input {
  height: 40px;
  display: inline-block;
  margin: 0;
  float: left;
  border: 1px grey solid;
  padding-left: 10px;
}

input:focus {
  outline: none;
}

input#name {
  width: 20%;
  max-width: 80px;
  transform: translate(-1px, 1px);
}

input#message {
  width: 60%;
  max-width: 240px;
  transform: translate(-2px, 1px);
}

.homeTextLeft {
  position: absolute;
  left: 210px;
  top: 110px;
  width: 200px;
  font-size: 3rem;
  font-style: italic;
  font-weight: 700;
  /*border: 1px solid blue;*/
}

.homeTextRight {
  position: absolute;
  left: 915px;
  top: 450px;
  width: 320px;
  /*border: 1px solid blue;*/
}

.homeTextScroll {
  position: absolute;
  right: 50px;
  bottom: 0px;
  width: 200px;
  white-space: normal;
  /*border: 1px solid blue;*/
  font-size: 0.7rem;
  line-height: 1rem;
  display: inline-block;
}

.projectContent {
  position: absolute;
  left: 670px;
  top: 60px;
}

.underline {
  text-decoration: underline;
}

.center {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.scribble {
  position: absolute;
  left: 50%;
  top: 150px;
  transform: translateX(-50%);
}

.me {
  position: absolute;
  left: 150px;
  top: 40px;
}

.me-arrow {
  position: absolute;
  left: 450px;
  top: 150px;
  transform: rotate(170deg);
}

.left {
  position: absolute;
  left: 15%;
  top: 50%;
  transform: translate(0, -50%);
}

img {
  filter: saturate(50%);
  mix-blend-mode: multiply;
  transition: all 0.5s ease;
}

img:hover {
  filter: saturate(100%);
  mix-blend-mode: normal;
  transition: all 0.5s ease;
}

.normal {
  filter: saturate(100%);
  mix-blend-mode: normal;
}

/* ########################
#      SCROLLBAR SHIT     #
######################## */

::-webkit-scrollbar {
  display: none;
}

div::-webkit-scrollbar {
  display: block;
  width: 3px;
}

div::-webkit-scrollbar-thumb {
  background: grey;
}

div::-webkit-scrollbar-track-piece {
  background: lightgrey;
}

/* The progress container (grey background) */
.progress-container {
  position: fixed;
  bottom: 0;
  left: 0;
  z-index: 1000;
  width: 100%;
  width: 100%;
  height: 10px;
  background: lightgrey;
  /*border-top: black 1px solid;*/
}

/* The progress bar (scroll indicator) */
.progress-bar {
  height: 10px;
  background: grey;
  width: 0%;
  z-index: 1000;
}

.lineBoth {
  width: 100%;
  border-top: 1px grey solid;
  border-bottom: 1px grey solid;
  padding: 10px;
}

.lineBoth:hover,
.line:hover {
  background: white;
  cursor: pointer;
  transition: all 0.2s ease;
}

.line {
  width: 100%;
  border-bottom: 1px grey solid;
  padding: 10px;
}

.testNumber {
  font-size: 0.6rem;
  line-height: 80px;
  vertical-align: middle;
  margin-left: 20px;
}

.testTitle {
  font-size: 2.5rem;
  line-height: 80px;
  vertical-align: middle;
  margin-left: 40px;
}

.testFloatRight {
  display: inline;
}

.testDescription {
  font-size: 0.6rem;
  line-height: 80px;
  vertical-align: middle;
  margin-left: 340px;
  float: right;
}

.testArrow {
  font-size: 1.3rem;
  line-height: 80px;
  vertical-align: middle;
  margin-left: 40px;
  margin-right: 20px;
  float: right;
}

.projectContent {
  position: absolute;
  left: 150px;
  top: 50%;
  transform: translateY(-50%);
}

.aboutMe {
  position: absolute;
  top: 450px;
  left: 150px;
  width: 600px;
  white-space: normal;
  font-size: 1rem;
}

.iz-me {
  position: absolute;
  top: 200px;
  left: 500px;
  width: 250px;
  white-space: normal;
  font-size: 0.8rem;
}

#typeCursor {
  display: inline-block;
  vertical-align: middle;
  width: 1px;
  height: 15px;
  background-color: black;
  animation: blink .75s step-end infinite;
}

@keyframes blink {

  from,
  to {
    background-color: transparent
  }

  50% {
    background-color: black;
  }
}

a {
  text-decoration: underline;
  color: black;
}

